# sim800c_call_action

./: .gitignore  LICENSE  README.md  TODO  action_systemd.service  bonbon_utils.py  main.py  pyproject.toml  sim800.py  utils.py
example_configs/: action__example.py  allowed_numbers__example.json  bonbon_config__example.json  usb_config__sim800c_example.json
